--- a/data_bind.html
+++ b/data_bind.html
@@ -14,9 +14,9 @@
     <script>
         new Vue({
             el: '#app',
-            data = {
+            data : {
                 message: "Hello World!"
-            };
+            }
         });
     </script>
 
